...
        />


    <TextView
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:id="@+id/albumAlbumDetailView"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Album Title"/>

...
